--- a/style.css
+++ b/style.css
@@ -1,62 +1,38 @@
-*,
-*:before,
-*:after {
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+.navbar {
+  margin-bottom: 0;
 }
-.group:after {
-    content: "";
-    display: table;
-    clear: both;
+.navbar-default {
+  background-color: #2c3e50;
+  border-color: #2c3e50;
 }
-body,
+.navbar-default .navbar-brand {
+  color: white;
+}
+.navbar-default .navbar-nav>li>a {
+  color: white;
+}
+.navbar-default .navbar-nav>li>a:focus,
+.navbar-default .navbar-nav>li>a:hover {
+  color: #ddd;
+}
+.navbar-default .navbar-nav>li>a:focus {
+  outline-color: white;
+}
+
 html {
-    font-family: 'Open Sans', sans-serif;
-    height: 100%;
+      height: 100%;
+      width: 100%;
+      overflow: hidden;
+    }
+body {
+  height: 100%;
+  width: 100%;
+  padding-top: 50px;
+  font-family: 'Open Sans', Arial, sans-serif;
 }
-
-header, .map-application {
-    min-width: 400px;
-}
-
-header {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 50px;
-    padding: 5px;
-    z-index: 9;
-    border-bottom: 1px solid #34495e;
-    width:100%;
-    background-color: #34495e;
-    box-shadow: 0px 2.5px 5px 0px rgba(48,48,48,0.85);
-    color: white;
-  }
-header .appName {
-    float: left;
-    /*padding: 5px;*/
-}
-
-header .logo {
-    float: right;
-}
-header .logo>a>img {
-    /*width: 40px;*/
-    height: 40px;
-    /*box-shadow: 1px 1px 5px 0px rgba(48,48,48,1);*/
-}
-
-.map {
-    width: 100%;
-    height: 100%;
-}
-.map-application {
-    height: 100%;
-    
-    padding-top: 50px;
+#map {
+  height: 100%;
+  width: 100%;
 }
 
 .info {
@@ -96,4 +72,64 @@ font-weight: 700;
 .leaflet-control-measure .leaflet-control-measure-toggle {
   height: 26px;
   width: 26px;
+}
+
+.legendIcon {
+  width: 18px;
+  height: 18px;
+  float: left;
+  margin-right: 12px;
+  opacity: 0.7;
+}
+
+
+
+.modal-content {
+  border-radius: 0;
+}
+
+.btn {
+  border-radius: 0;
+}
+
+#slopeLegendSmall{
+  background-color: #639B7E;
+}
+#slopeLegendBig{
+  background-color: #C5A8C4;
+}
+#potentialTrailFull {
+  background-color: #FF9900;
+}
+#potentialTrailPart {
+  background-color: #FFFF99;
+}
+#existingPaths {
+  background-color: #999966;
+}
+
+
+.legendIconSurround {
+  width: 24px;
+  height: 24px;
+  float: left;
+  opacity: 0.7;
+  background-color: black;
+  margin-right: 4px;
+}
+
+#wmaBounds {
+  background-color: black;
+  border-style: dashed;
+  border-width: 2px;
+  border-color: white;
+  margin-left: 3px;
+  margin-top: 3px;
+}
+
+@media (min-width: 768px){
+  .modal-dialog {
+    width: 300px;
+  }
+  }
 }
