--- a/style.css
+++ b/style.css
@@ -5,11 +5,14 @@
   background-color: #2c3e50;
   border-color: #2c3e50;
 }
-.navbar-default .navbar-brand {
+.navbar-default .navbar-brand,
+.navbar-default .navbar-brand:hover {
   color: white;
+  cursor: default;
 }
 .navbar-default .navbar-nav>li>a {
   color: white;
+  cursor: pointer;
 }
 .navbar-default .navbar-nav>li>a:focus,
 .navbar-default .navbar-nav>li>a:hover {
@@ -75,14 +78,12 @@ font-weight: 700;
 }
 
 .legendIcon {
-  width: 18px;
+  width: 28px;
   height: 18px;
   float: left;
   margin-right: 12px;
   opacity: 0.7;
 }
-
-
 
 .modal-content {
   border-radius: 0;
@@ -107,29 +108,34 @@ font-weight: 700;
 #existingPaths {
   background-color: #999966;
 }
-
-
-.legendIconSurround {
-  width: 24px;
-  height: 24px;
-  float: left;
-  opacity: 0.7;
-  background-color: black;
-  margin-right: 4px;
-}
-
 #wmaBounds {
   background-color: black;
+}
+#wmaTicks {
   border-style: dashed;
   border-width: 2px;
   border-color: white;
-  margin-left: 3px;
-  margin-top: 3px;
+  width: 26px;
+  height: 16px;
+  margin-top: 1px;
+  margin-left: 1px;
 }
 
 @media (min-width: 768px){
-  .modal-dialog {
+  .modal-dialog-narrow {
     width: 300px;
   }
+  .navbar-nav {
+    float: right;
   }
+}
+.tabbable>.nav {
+  margin-bottom: 10px;
+}
+.embed-responsive {
+  margin-top: 8px;
+}
+.btn-default {
+  background-color: #34495e;
+  border-color: #2c3e50;
 }
