fix modal buttons

--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ font-weight: 700;
 .embed-responsive {
   margin-top: 8px;
 }
-.btn-default {
+.btn-primary {
   background-color: #34495e;
   border-color: #2c3e50;
 }
