fix trails popup, recolor existing paths, add disclaimer, fix slope zoom issue

--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ font-weight: 700;
   background-color: #FFFF99;
 }
 #existingPaths {
-  background-color: #999966;
+  background-color: #8353FC;
 }
 #wmaBounds {
   background-color: black;
